--- a/Static/assets/css/style.css
+++ b/Static/assets/css/style.css
@@ -40,3 +40,11 @@ img {
 	border-bottom: 1px solid #ececec;
 	padding-bottom: 10px;
 }
+
+.text-muted {
+	font-size: 14px!important;
+}
+
+.card-text span{
+	color: #aeaeae;
+}
